tech/k8s/products-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-service
  namespace: products
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products-service
  template:
    metadata:
      labels:
        app: products-service
    spec:
      containers:
      - name: products-service
#        image: 264591339294.dkr.ecr.us-east-1.amazonaws.com/products-service:latest
        image: 131793876715.dkr.ecr.us-east-1.amazonaws.com/microservices/products
        imagePullPolicy: Always
        ports:
        - containerPort: 8002
        resources:
          limits:
            cpu: "0.5"
            memory: "256Mi"
          requests:
            cpu: "0.2"
            memory: "128Mi"
        readinessProbe:
          httpGet:
            path: /health
            port: 8002
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
