tech/k8s/products-service/deployment-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-local
  namespace: products
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-local
  template:
    metadata:
      labels:
        app: mongodb-local
    spec:
      containers:
      - name: mongodb
        image: mongo:latest
        ports:
        - containerPort: 27017
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "0.2"
            memory: "256Mi"
        volumeMounts:
        - name: mongodb-data
          mountPath: /data/db
      volumes:
      - name: mongodb-data
        emptyDir: {}  # Para um ambiente de produção, você usaria um PersistentVolume
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-local
  namespace: products
spec:
  selector:
    app: mongodb-local
  ports:
  - port: 27017
    targetPort: 27017
  type: ClusterIP
