tech/k8s/products-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: products-service
  namespace: products
spec:
  selector:
    app: products-service
  ports:
  - port: 8002
    targetPort: 8002
  type: ClusterIP
