tech/k8s/products-service/NetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-mongodb-egress
  namespace: microservices
spec:
  podSelector:
    matchLabels:
      app: products-service
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: mongodb-local
    ports:
    - protocol: TCP
      port: 27017
  - to:  # Permita acesso ao DNS para resolução de nomes
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
